[gd_scene load_steps=11 format=3 uid="uid://drgqx8i8q56q5"]

[ext_resource type="Script" uid="uid://bwgdpspkfaa7i" path="res://car.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://b4h21r367evch" path="res://rally_car_prototype_small.tscn" id="2_06lh1"]
[ext_resource type="PackedScene" uid="uid://bxdqfi4r5iylv" path="res://wiel.tscn" id="2_uoj53"]
[ext_resource type="Texture2D" uid="uid://c7ovis1c7f6rc" path="res://drift_smoke.png" id="3_k61xc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_body"]
size = Vector3(2, 0.6, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7822p"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_body"]
material = SubResource("StandardMaterial3D_7822p")
size = Vector3(1.5, 0.6, 3)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7822p"]
gravity = Vector3(0, 0.1, 0)
linear_accel_min = 0.999998
linear_accel_max = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k61xc"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("3_k61xc")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_06lh1"]
material = SubResource("StandardMaterial3D_k61xc")

[node name="Car" type="RigidBody3D"]
mass = 50.0
script = ExtResource("1_script")
suspension_rest = 0.5
suspension_travel = -0.2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_body")

[node name="CarMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.747952, 0)
visible = false
mesh = SubResource("BoxMesh_body")

[node name="rally_car_prototype_small" parent="." instance=ExtResource("2_06lh1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="WheelFL" parent="." instance=ExtResource("2_uoj53")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="WheelFR" parent="." instance=ExtResource("2_uoj53")]

[node name="WheelRL" parent="." instance=ExtResource("2_uoj53")]

[node name="WheelRR" parent="." instance=ExtResource("2_uoj53")]

[node name="RayFL" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, -1.4)
target_position = Vector3(0, -1.5, 0)

[node name="RayFR" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, -1.4)
target_position = Vector3(0, -1.5, 0)

[node name="RayRL" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 1.4)
target_position = Vector3(0, -1.5, 0)

[node name="RayRR" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, 1.4)
target_position = Vector3(0, -1.5, 0)

[node name="drift_smoke_effect" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.31677, -1.82095)
emitting = false
process_material = SubResource("ParticleProcessMaterial_7822p")
draw_pass_1 = SubResource("QuadMesh_06lh1")
